# Testing-Insights-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: Testing Insights Agent.ipynb
src/testing_insights_agent/: __init__.py  cli.py  config.py  db.py  graph.py  llm.py  memory.py  prompts.py
