[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-insights-agent"
version = "0.1.0"
description = "Conversational SQL analytics agent with short/long-term memory + predictive recommendations"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
